resources_csdp/codefresh-delivery-pipelines.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefresh-delivery-pipelines
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /webhooks/corpsite
            backend:
              service:
                name: corpsite-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /webhooks/demo
            backend:
              service:
                name: demo-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
